<resources>
    <string name="app_name">MiniMoneybox</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_full_name">Full Name (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="email_address_error">Please enter a correct email address</string>
    <string name="email_address_empty">Email address cannot be empty</string>
    <string name="password_error">Please enter a correct password</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="full_name_error">Please enter your full name</string>
    <string name="input_valid">Input is valid!</string>

    <!-- Strings for User Accounts screen -->
    <string name="user_accounts_name">User Accounts</string>
    <string name="greeting_message">Hello %1$s</string>
    <string name="total_value">Total Value: %1$s</string>
    <string name="account_detail">Plan Value: £%1$s\nMoneybox: £%2$s</string>

    <!-- Strings for One Off Payments screen -->
    <string name="individual_account_name">Individual account</string>
    <string name="plan_value">Plan Value: £%1$s</string>
    <string name="moneybox">Moneybox: £%1$s</string>
    <string name="quick_deposit">Add £10</string>
</resources>
